back to original layout

--- a/public/routes/login.html
+++ b/public/routes/login.html
@@ -41,13 +41,13 @@
                 <button type="submit" name="button">Create Account</button>
               </form>
           </div>
-        <!-- </div> -->
+        </div>
 
       </section>
-      <a href="#goto">Jump</a>
+        <div class="bottom-links">Learn More</div>
 
   <!-- ======================================================================================================-->
-<h2 id="goto">Header</h2>
+
   <!-- ======================================================================================================-->
 
       <section id="vertical">
@@ -97,10 +97,6 @@
                 </div>
               </div>
       </section>
-
-
-
-
     </div>
   </main>
 </div>
