aligned login media queries

--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS -->
-
     <link rel="stylesheet" href="./bundle.min.css" media="screen" title="no title">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" type="text/css" href="./sweetalert.css">
     <!-- SWEET ALERT -->
-    <!-- <script src="dist/sweetalert.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="dist/sweetalert.css"> -->
+    <link rel="stylesheet" type="text/css" href="./sweetalert.css">
 
-    <title>Order Hound2</title>
+    <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16">
+    <title>Order Hound</title>
 
   </head>
 
