--- a/public/routes/login.html
+++ b/public/routes/login.html
@@ -15,7 +15,7 @@
                 <div class="logo"></div>
                   <div class="description-box">
                     <div class="description">
-                      Easily find orders in your production line.
+                      Easily find orders in your production line
                     </div>
                   </div>
             </div>
@@ -44,7 +44,7 @@
         </div>
 
       </section>
-        <div class="bottom-links">Learn More</div>
+        <!-- <div class="bottom-links">Learn More</div> -->
 
   <!-- ======================================================================================================-->
 
@@ -60,7 +60,7 @@
                       <div class="logo"></div>
                         <div class="description-box">
                           <div class="description">
-                            Easily find orders in your production line.
+                            Easily find orders in your production line
                           </div>
                         </div>
                   </div>
