added home button

--- a/public/routes/home.html
+++ b/public/routes/home.html
@@ -16,7 +16,7 @@
     <button class="accordion">Find PO</button>
     <div class="panel">
       <input type="text" placeholder="Find PO#" class="input-field input-po-position" ng-model="poNumber" />
-      <button type="button" class="button" ng-click="findpo(poNumber); showModal=!showModal">Find<i class="material-icons" style="font-size:32px;">search</i></button>
+      <button type="button" class="button" style="border: 1px solid #EFE9E9" ng-click="findpo(poNumber); showModal=!showModal">Find<i class="material-icons" style="font-size:32px;">search</i></button>
     </div>
   </div>
   <!-- ********************* MODAL *******************-->
