--- a/public/routes/manageUser.html
+++ b/public/routes/manageUser.html
@@ -1,11 +1,9 @@
 <div class="center-of-everything">
   <header-directive></header-directive>
-
     <div class="make-user-title">Make New User</div>
     <section class="ifield-container">
       <div class="make-user-container">
         <br><input id="input-margins" type="text" placeholder="User Name" ng-model="obj.name" required/>
-        <!-- (remember to remove unique contraint on table just for users, not for admins) -->
         <br><input id="input-margins" type="email" placeholder="Email" ng-model="obj.email" required/>
         <br><input id="input-margins" type="text" placeholder="Company" ng-model="obj.company" required/>
       </div>
@@ -27,3 +25,4 @@
   <div class="create-user-button" type="submit" name="button" ng-click="getter(obj)">Create User<i class="material-icons" style="font-size:32px;">account_circle</i></div>
 </div>
   <div class="create-user-button2" type="submit" name="button" ng-click="getter(obj)">Create User<i class="material-icons" style="font-size:32px;">account_circle</i></div>
+  <a href="#/adminHome"><div class="home-button"><i class="material-icons" style="font-size: 50px">home</i></div></a>
