--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <!-- SWEET ALERT -->
     <link rel="stylesheet" type="text/css" href="./sweetalert.css">
-
-    <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon-16x16.png"/>
+    <!-- <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16"> -->
     <title>Order Hound</title>
 
   </head>
